typespec validation: emitter configs, formatting

--- a/specification/servicefabricmanagedclusters/ServiceFabricManagedClusters.Management/tspconfig.yaml
+++ b/specification/servicefabricmanagedclusters/ServiceFabricManagedClusters.Management/tspconfig.yaml
@@ -12,6 +12,12 @@ options:
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/servicefabricmanagedclusters.json"
     examples-dir: "{project-root}/examples"
     emit-lro-options: "all"
+  "@azure-tools/typespec-csharp":
+    package-dir: "Azure.ResourceManager.ServiceFabricManagedClusters"
+    clear-output-folder: true
+    model-namespace: false
+    namespace: "{package-dir}"
+    flavor: azure
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-servicefabricmanagedclusters"
     package-name: "{package-dir}"
@@ -23,10 +29,19 @@ options:
     packageDetails:
       name: "@azure/arm-servicefabricmanagedclusters"
     flavor: azure
+    generateMetadata: true
+    hierarchyClient: false
+    experimentalExtensibleEnums: true
+    enableOperationGroup: true
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/servicefabricmanagedclusters"
     package-dir: "armservicefabricmanagedclusters"
     module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    fix-const-stuttering: true
+    generate-examples: true
+    generate-fakes: true
+    head-as-boolean: true
+    inject-spans: true
   "@azure-tools/typespec-java":
     package-dir: "azure-resourcemanager-servicefabricmanagedclusters"
     namespace: com.azure.resourcemanager.servicefabricmanagedclusters
