Correct package name from plural to singular

--- a/specification/storage/Microsoft.BlobStorage/tspconfig.yaml
+++ b/specification/storage/Microsoft.BlobStorage/tspconfig.yaml
@@ -36,8 +36,8 @@ options:
     namespace: com.azure.storage.blob
     flavor: azure
   "@azure-tools/typespec-rust":
-    package-dir: "azure_storage_blobs"
-    crate-name: "azure_storage_blobs"
+    package-dir: "azure_storage_blob"
+    crate-name: "azure_storage_blob"
     crate-version: "0.1.0"
     flavor: azure
 linter:
