Update tuning params and examples

--- a/specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/TuningConfiguration_StartSession.json
+++ b/specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/TuningConfiguration_StartSession.json
@@ -3,7 +3,13 @@
     "serverName": "testserver",
     "resourceGroupName": "testrg",
     "api-version": "2025-01-01-preview",
-    "subscriptionId": "ffffffff-ffff-ffff-ffff-ffffffffffff"
+    "subscriptionId": "ffffffff-ffff-ffff-ffff-ffffffffffff",
+    "configTuningRequest": {
+      "properties": {
+        "allowServerRestarts": false,
+        "targetImprovementMetric": "targetImprovementMetric"
+      }
+    }
   },
   "responses": {
     "200": {},
