--- a/specification/web/resource-manager/sdk-suppressions.yaml
+++ b/specification/web/resource-manager/sdk-suppressions.yaml
@@ -10,6 +10,10 @@ suppressions:
         - Operation WebApps.beginApproveOrRejectPrivateEndpointConnectionAndWait has a new signature
         - Operation WebApps.beginApproveOrRejectPrivateEndpointConnectionSlot has a new signature
         - Operation WebApps.beginApproveOrRejectPrivateEndpointConnectionSlotAndWait has a new signature
+        - Interface Site no longer has parameter vnetBackupRestoreEnabled
+        - Interface Site no longer has parameter vnetContentShareEnabled
+        - Interface Site no longer has parameter vnetImagePullEnabled
+        - Interface Site no longer has parameter vnetRouteAllEnabled
   azure-sdk-for-go:
     - package: sdk/resourcemanager/appservice/armappservice
       breaking-changes:
