--- a/specification/codesigning/CodeSigning.Management/tspconfig.yaml
+++ b/specification/codesigning/CodeSigning.Management/tspconfig.yaml
@@ -23,6 +23,12 @@ options:
     flavor: "azure"
     generate-test: true
     generate-sample: true
+  "@azure-tools/typespec-csharp":
+    package-dir: "Azure.ResourceManager.TrustedSigning"
+    clear-output-folder: true
+    model-namespace: false
+    namespace: "{package-dir}"
+    flavor: azure
   "@azure-tools/typespec-ts":
     azureSdkForJs: true
     isModularLibrary: true
