Added getNormalization API

--- a/specification/manufacturingdatasolution/ManufacturingDataSolution.Service/examples/2025-03-01/ServiceApis_ListOpcuaMapping.json
+++ b/specification/manufacturingdatasolution/ManufacturingDataSolution.Service/examples/2025-03-01/ServiceApis_ListOpcuaMapping.json
@@ -2,7 +2,8 @@
   "title": "ServiceApis_ListOpcuaMapping",
   "operationId": "ServiceApis_ListOpcuaMapping",
   "parameters": {
-    "api-version": "2025-03-01"
+    "api-version": "2025-03-01",
+    "entityName": "TestEntity"
   },
   "responses": {
     "200": {
