litndiff: * supressions * removed requirement for nodetypesku.capacity * changed duplicate example names

--- a/specification/servicefabricmanagedclusters/ServiceFabricManagedClusters.Management/examples/2024-11-01-preview/ManagedApplyMaintenanceWindowPost_example.json
+++ b/specification/servicefabricmanagedclusters/ServiceFabricManagedClusters.Management/examples/2024-11-01-preview/ManagedApplyMaintenanceWindowPost_example.json
@@ -9,5 +9,5 @@
     "200": {}
   },
   "operationId": "managedApplyMaintenanceWindow_Post",
-  "title": "Maintenance Window Status"
+  "title": "Apply Maintenance Window Status"
 }
