--- a/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/preview/2024-11-01-preview/examples/ManagedApplyMaintenanceWindowPost_example.json
+++ b/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/preview/2024-11-01-preview/examples/ManagedApplyMaintenanceWindowPost_example.json
@@ -9,5 +9,5 @@
     "200": {}
   },
   "operationId": "managedApplyMaintenanceWindow_Post",
-  "title": "Maintenance Window Status"
+  "title": "Apply Maintenance Window Status"
 }
