Add sparse-checkout configuration to CodeQL workflow

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -47,12 +47,17 @@ jobs:
           config: |
             paths:
             - .github
+            sparse-checkout: |
+              .github
         - language: javascript-typescript
           build-mode: none
           config: |
             paths:
             - .github
             - eng/tools
+            sparse-checkout: |
+              .github
+              eng/tools
 
         # CodeQL supports the following values keywords for 'language': 'c-cpp', 'csharp', 'go', 'java-kotlin', 'javascript-typescript', 'python', 'ruby', 'swift'
         # Use `c-cpp` to analyze code written in C, C++ or both
@@ -65,6 +70,9 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        sparse-checkout: |
+          ${{ matrix.sparse-checkout }}
 
     # Add any setup steps before running the `github/codeql-action/init` action.
     # This includes steps like installing compilers or runtimes (`actions/setup-node`
@@ -78,7 +86,8 @@ jobs:
       with:
         languages: ${{ matrix.language }}
         build-mode: ${{ matrix.build-mode }}
-        config: ${{ matrix.config }}
+        config: |
+          ${{ matrix.config }}
         # If you wish to specify custom queries, you can do so here or in a config file.
         # By default, queries listed here will override any specified in a config file.
         # Prefix the list here with "+" to use these queries and those in the config file.
