--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -71,8 +71,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
-        sparse-checkout: |
-          ${{ matrix.sparse-checkout }}
+        sparse-checkout: ${{ matrix.sparse-checkout }}
 
     # Add any setup steps before running the `github/codeql-action/init` action.
     # This includes steps like installing compilers or runtimes (`actions/setup-node`
@@ -86,8 +85,7 @@ jobs:
       with:
         languages: ${{ matrix.language }}
         build-mode: ${{ matrix.build-mode }}
-        config: |
-          ${{ matrix.config }}
+        config: ${{ matrix.config }}
         # If you wish to specify custom queries, you can do so here or in a config file.
         # By default, queries listed here will override any specified in a config file.
         # Prefix the list here with "+" to use these queries and those in the config file.
