--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -15,13 +15,13 @@ on:
   push:
     branches: [ "main", "release-*" ]
     paths:
-    - ".github/**"
-    - "eng/tools/**"
+    - .github/**
+    - eng/tools/**
   pull_request:
     branches: [ "main", "release-*" ]
     paths:
-    - ".github/**"
-    - "eng/tools/**"
+    - .github/**
+    - eng/tools/**
   schedule:
     - cron: '27 4 * * 1'
 
