--- a/specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/TuningConfiguration_ListSessionDetails.json
+++ b/specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/TuningConfiguration_ListSessionDetails.json
@@ -4,6 +4,7 @@
     "resourceGroupName": "testrg",
     "api-version": "2025-01-01-preview",
     "subscriptionId": "ffffffff-ffff-ffff-ffff-ffffffffffff",
+    "tuningOption": "configuration",
     "sessionId": "oooooooo-oooo-oooo-oooo-oooooooooooo"
   },
   "responses": {
