--- a/specification/mongocluster/DocumentDB.MongoCluster.Management/tspconfig.yaml
+++ b/specification/mongocluster/DocumentDB.MongoCluster.Management/tspconfig.yaml
@@ -36,15 +36,15 @@ options:
     clear-output-folder: true
     namespace: "{package-dir}"
   "@azure-tools/typespec-ts":
-    azureSdkForJs: true
-    isModularLibrary: true
-    generateMetadata: true
-    hierarchyClient: false
+    azure-sdk-for-js: true
+    is-modular-library: true
+    generate-metadata: true
+    hierarchy-client: false
     experimentalExtensibleEnums: true
-    enableOperationGroup: true
+    enable-operationgroup: true
     package-dir: "arm-mongocluster"
     flavor: "azure"
-    packageDetails:
+    package-details:
       name: "@azure/arm-mongocluster"
 linter:
   extends:
