--- a/specification/trustedsigning/TrustedSigning/tspconfig.yaml
+++ b/specification/trustedsigning/TrustedSigning/tspconfig.yaml
@@ -27,9 +27,9 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "azure-developer-trustedsigning-rest"
-    generateMetadata: true
-    generateTest: true
-    packageDetails:
+    generate-metadata: true
+    generate-test: true
+    package-details:
       name: "@azure-rest/developer-trusted signing"
       description: "Azure trusted signing service"
     flavor: azure
