--- a/specification/chaos/Chaos.Management/tspconfig.yaml
+++ b/specification/chaos/Chaos.Management/tspconfig.yaml
@@ -14,16 +14,16 @@ options:
     omit-unreachable-types: true
     use-read-only-status-schema: true
   "@azure-tools/typespec-ts":
-    azureSdkForJs: true
-    isModularLibrary: true
-    generateMetadata: true
-    hierarchyClient: false
-    experimentalExtensibleEnums: true
-    enableOperationGroup: true
+    azure-sdk-for-js: true
+    is-modular-library: true
+    generate-metadata: true
+    hierarchy-client: false
+    experimental-extensible-enums: true
+    enable-operation-group: true
     clear-output-folder: true
     package-dir: "arm-chaos"
     flavor: "azure"
-    packageDetails:
+    package-details:
       name: "@azure/arm-chaos"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-chaos"
