--- a/specification/cognitiveservices/AnomalyDetector/tspconfig.yaml
+++ b/specification/cognitiveservices/AnomalyDetector/tspconfig.yaml
@@ -36,8 +36,8 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     emitter-output-dir: "{js-sdk-folder}/sdk/{service-directory-name}/ai-anomaly-detector-rest"
-    generateMetadata: true
-    generateTest: true
-    packageDetails:
+    generate-metadata: true
+    generate-test: true
+    package-details:
       name: "@azure-rest/ai-anomaly-detector"
     flavor: azure
