--- a/specification/databasewatcher/DatabaseWatcher.Management/tspconfig.yaml
+++ b/specification/databasewatcher/DatabaseWatcher.Management/tspconfig.yaml
@@ -30,15 +30,13 @@ options:
     package-dir: "azure-resourcemanager-databasewatcher"
     service-name: "Database Watcher"
   "@azure-tools/typespec-ts":
-    azureSdkForJs: true
-    enableOperationGroup: true
-    experimentalExtensibleEnums: true
-    flavor: azure
-    generateMetadata: true
-    hierarchyClient: false
-    isModularLibrary: true
-    package-dir: "arm-databasewatcher"
-    packageDetails:
+    azure-sdk-for-js: true
+    enable-operation-group: true
+    experimental-extensible-enums: true
+    generate-metadata: true
+    hierarchy-client: false
+    is-modular-library: true
+    package-details:
       name: "@azure/arm-databasewatcher"
   "@azure-tools/typespec-go":
     fix-const-stuttering: true
