--- a/specification/eventgrid/Azure.Messaging.EventGrid/tspconfig.yaml
+++ b/specification/eventgrid/Azure.Messaging.EventGrid/tspconfig.yaml
@@ -45,11 +45,11 @@ options:
       loglevel: info
     flavor: azure
   "@azure-tools/typespec-ts":
-    generateMetadata: true
-    generateTest: true
-    azureSdkForJs: true
+    generate-metadata: true
+    generate-test: true
+    azure-sdk-for-js: true
     package-dir: "eventgrid"
-    packageDetails:
+    package-details:
       name: "@azure/eventgrid"
     flavor: azure
   "@azure-tools/typespec-go":
