--- a/specification/informatica/Informatica.DataManagement.Management/tspconfig.yaml
+++ b/specification/informatica/Informatica.DataManagement.Management/tspconfig.yaml
@@ -28,15 +28,15 @@ options:
     namespace: "Azure.ResourceManager.InformaticaDataManagement"
   "@azure-tools/typespec-ts":
     service-dir: "sdk/informatica"
-    azureSdkForJs: true
-    isModularLibrary: true
-    generateMetadata: true
-    hierarchyClient: false
-    experimentalExtensibleEnums: true
-    enableOperationGroup: true
+    azure-sdk-for-js: true
+    is-modular-library: true
+    generate-metadata: true
+    hierarchy-client: false
+    experimental-extensible-enums: true
+    enable-operation-group: true
     package-dir: "arm-informaticadatamanagement"
     flavor: "azure"
-    packageDetails:
+    package-details:
       name: "@azure/arm-informaticadatamanagement"
 linter:
   extends:
