--- a/specification/kubernetesruntime/KubernetesRuntime.Management/tspconfig.yaml
+++ b/specification/kubernetesruntime/KubernetesRuntime.Management/tspconfig.yaml
@@ -28,15 +28,15 @@ options:
     generate-sample: true
   "@azure-tools/typespec-ts":
     "service-dir": kubernetesruntime
-    azureSdkForJs: true
-    isModularLibrary: true
-    generateMetadata: true
-    hierarchyClient: false
-    experimentalExtensibleEnums: true
-    enableOperationGroup: true
+    azure-sdk-for-js: true
+    is-modular-library: true
+    generate-metadata: true
+    hierarchy-client: false
+    experimental-extensible-enums: true
+    enable-operation-group: true
     package-dir: "arm-containerorchestratorruntime"
     flavor: "azure"
-    packageDetails:
+    package-details:
       name: "@azure/arm-containerorchestratorruntime"
   "@azure-tools/typespec-java":
     package-dir: "azure-resourcemanager-containerorchestratorruntime"
