--- a/specification/machinelearningservices/AzureAI.Assets/tspconfig.yaml
+++ b/specification/machinelearningservices/AzureAI.Assets/tspconfig.yaml
@@ -17,11 +17,11 @@ options:
     generate-test: true
     generate-sample: true
   "@azure-tools/typespec-ts":
-    generateMetadata: true
-    generateTest: true
-    azureSdkForJs: true
+    generate-metadata: true
+    generate-test: true
+    azure-sdk-for-js: true
     package-dir: "ai-resources-autogen"
-    packageDetails:
+    package-details:
       name: "@azure/ai-resources-autogen"
     flavor: azure
 linter:
