--- a/specification/monitor/Microsoft.Monitor.Management/tspconfig.yaml
+++ b/specification/monitor/Microsoft.Monitor.Management/tspconfig.yaml
@@ -18,16 +18,16 @@ options:
     new-line: lf
     omit-unreachable-types: true
   "@azure-tools/typespec-ts":
-    azureSdkForJs: true
-    isModularLibrary: true
-    generateMetadata: true
-    hierarchyClient: false
+    azure-sdk-for-js: true
+    is-modular-library: true
+    generate-metadata: true
+    hierarchy-client: false
     experimentalExtensibleEnums: true
-    enableOperationGroup: true
+    enable-operation-group: true
     clear-output-folder: true
     package-dir: "arm-monitor"
     flavor: "azure"
-    packageDetails:
+    package-details:
       name: "@azure/arm-monitor"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-monitor"
