--- a/specification/scvmm/ScVmm.Management/tspconfig.yaml
+++ b/specification/scvmm/ScVmm.Management/tspconfig.yaml
@@ -14,15 +14,15 @@ options:
     arm-resource-flattening: true
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/scvmm.json"
   "@azure-tools/typespec-ts":
-    azureSdkForJs: true
-    isModularLibrary: true
-    generateMetadata: true
-    hierarchyClient: false
-    experimentalExtensibleEnums: true
-    enableOperationGroup: true
+    azure-sdk-for-fs: true
+    is-modular-library: true
+    generate-metadata: true
+    hierarchy-client: false
+    experimental-extensible-enums: true
+    enable-operation-group: true
     package-dir: "arm-scvmm"
     flavor: "azure"
-    packageDetails:
+    package-details:
       name: "@azure/arm-scvmm"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-scvmm"
