--- a/specification/workloads/Workloads.SAPDiscoverySite.Management/tspconfig.yaml
+++ b/specification/workloads/Workloads.SAPDiscoverySite.Management/tspconfig.yaml
@@ -13,15 +13,15 @@ options:
     arm-resource-flattening: true
     output-file: "{azure-resource-provider-folder}/{service-name}/SAPDiscoverySites/{version-status}/{version}/SAPDiscoverySites.json"
   "@azure-tools/typespec-ts":
-    azureSdkForJs: true
-    isModularLibrary: true
-    generateMetadata: true
-    hierarchyClient: false
-    experimentalExtensibleEnums: true
-    enableOperationGroup: true
+    azure-sdk-for-js: true
+    is-modular-library: true
+    generate-metadata: true
+    hierarchy-client: false
+    experimental-extensible-enums: true
+    enable-operation-group: true
     package-dir: "arm-migrationdiscoverysap"
     flavor: "azure"
-    packageDetails:
+    package-details:
       name: "@azure/arm-migrationdiscoverysap"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-migrationdiscoverysap"
