--- a/specification/databasewatcher/DatabaseWatcher.Management/tspconfig.yaml
+++ b/specification/databasewatcher/DatabaseWatcher.Management/tspconfig.yaml
@@ -33,9 +33,11 @@ options:
     azure-sdk-for-js: true
     enable-operation-group: true
     experimental-extensible-enums: true
+    flavor: azure
     generate-metadata: true
     hierarchy-client: false
     is-modular-library: true
+    package-dir: "arm-databasewatcher"
     package-details:
       name: "@azure/arm-databasewatcher"
   "@azure-tools/typespec-go":
