Fix LintDiff failed

--- a/specification/app/resource-manager/Microsoft.App/stable/2025-01-01/ConnectedEnvironmentsDaprComponents.json
+++ b/specification/app/resource-manager/Microsoft.App/stable/2025-01-01/ConnectedEnvironmentsDaprComponents.json
@@ -47,6 +47,12 @@
               "$ref": "./CommonDefinitions.json#/definitions/DaprComponentsCollection"
             }
           },
+          "201": {
+            "description": "Created",
+            "schema": {
+              "$ref": "./CommonDefinitions.json#/definitions/DaprComponentsCollection"
+            }
+          },
           "default": {
             "description": "Common error response.",
             "schema": {
