--- a/specification/app/resource-manager/Microsoft.App/stable/2025-01-01/ConnectedEnvironmentsDaprComponents.json
+++ b/specification/app/resource-manager/Microsoft.App/stable/2025-01-01/ConnectedEnvironmentsDaprComponents.json
@@ -47,12 +47,6 @@
               "$ref": "./CommonDefinitions.json#/definitions/DaprComponentsCollection"
             }
           },
-          "201": {
-            "description": "Created",
-            "schema": {
-              "$ref": "./CommonDefinitions.json#/definitions/DaprComponentsCollection"
-            }
-          },
           "default": {
             "description": "Common error response.",
             "schema": {
@@ -272,6 +266,12 @@
         ],
         "responses": {
           "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "./CommonDefinitions.json#/definitions/DaprSecretsCollection"
+            }
+          },
+          "201": {
             "description": "OK",
             "schema": {
               "$ref": "./CommonDefinitions.json#/definitions/DaprSecretsCollection"
