Update package and package-lock.json

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@azure-tools/typespec-liftr-base": "0.8.0",
     "@azure/avocado": "^0.9.1",
     "@autorest/openapi-to-typespec": "0.10.12",
+    "@microsoft.azure/openapi-validator": "2.2.3",
     "@typespec/compiler": "0.66.0",
     "@typespec/http": "0.66.0",
     "@typespec/openapi": "0.66.0",
