--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@azure-tools/spec-gen-sdk": "0.2.2",
     "@azure/avocado": "^0.9.1",
     "@autorest/openapi-to-typespec": "0.10.12",
+    "@microsoft.azure/openapi-validator": "2.2.3",
     "@typespec/compiler": "0.66.0",
     "@typespec/http": "0.66.0",
     "@typespec/openapi": "0.66.0",
