--- a/specification/sovereign/Sovereign.Management/tspconfig.yaml
+++ b/specification/sovereign/Sovereign.Management/tspconfig.yaml
@@ -1,3 +1,6 @@
+parameters:
+  "service-dir":
+    default: "sdk/regulatedenvironmentmanagement"
 emit:
   - "@azure-tools/typespec-autorest"
 linter:
