--- a/eng/pipelines/typespec-apiview.yml
+++ b/eng/pipelines/typespec-apiview.yml
@@ -21,6 +21,7 @@ jobs:
 
   steps:
   - checkout: self
+    # Required to compare head commit with base commit
     fetchDepth: 2
 
   - template: /eng/pipelines/templates/steps/use-node-version.yml
