--- a/specification/compute/resource-manager/Microsoft.Compute/ComputeRP/stable/2024-07-01/examples/virtualMachineScaleSetExamples/VirtualMachineScaleSet_Create_WithProtectedSettingsFromKeyVault.json
+++ b/specification/compute/resource-manager/Microsoft.Compute/ComputeRP/stable/2024-07-01/examples/virtualMachineScaleSetExamples/VirtualMachineScaleSet_Create_WithProtectedSettingsFromKeyVault.json
@@ -135,6 +135,7 @@
             "extensionProfile": {
               "extensions": [
                 {
+                  "id": "/subscriptions/{subscription-id}/resourceGroups/myResourceGroup/providers/Microsoft.Compute/virtualMachines/myVM/extensions/myVMExtension",
                   "name": "{extension-name}",
                   "properties": {
                     "autoUpgradeMinorVersion": false,
@@ -235,6 +236,7 @@
             "extensionProfile": {
               "extensions": [
                 {
+                  "id": "/subscriptions/{subscription-id}/resourceGroups/myResourceGroup/providers/Microsoft.Compute/virtualMachines/myVM/extensions/myVMExtension",
                   "name": "{extension-name}",
                   "properties": {
                     "autoUpgradeMinorVersion": false,
