--- a/specification/compute/Compute.Management/examples/2024-07-01/virtualMachineScaleSetExamples/VirtualMachineScaleSet_Create_WithExtensionsSuppressFailuresEnabled.json
+++ b/specification/compute/Compute.Management/examples/2024-07-01/virtualMachineScaleSetExamples/VirtualMachineScaleSet_Create_WithExtensionsSuppressFailuresEnabled.json
@@ -130,6 +130,7 @@
             "extensionProfile": {
               "extensions": [
                 {
+                  "id": "/subscriptions/{subscription-id}/resourceGroups/myResourceGroup/providers/Microsoft.Compute/virtualMachines/myVM/extensions/myVMExtension",
                   "name": "{extension-name}",
                   "properties": {
                     "autoUpgradeMinorVersion": false,
@@ -225,6 +226,7 @@
             "extensionProfile": {
               "extensions": [
                 {
+                  "id": "/subscriptions/{subscription-id}/resourceGroups/myResourceGroup/providers/Microsoft.Compute/virtualMachines/myVM/extensions/myVMExtension",
                   "name": "{extension-name}",
                   "properties": {
                     "autoUpgradeMinorVersion": false,
