Revert "update configs"
This reverts commit e33404d37170c8cee12ae0ea730fd1cbe1763700.

--- a/specification/ai/Face/tspconfig.yaml
+++ b/specification/ai/Face/tspconfig.yaml
@@ -29,10 +29,10 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "ai-vision-face-rest"
-    generate-metadata: true
-    generate-test: true
+    generateMetadata: true
+    generateTest: true
     flavor: azure
-    package-details:
+    packageDetails:
       name: "@azure-rest/ai-vision-face"
       description: "Face API REST Client"
   "@azure-tools/typespec-java":
