--- a/specification/ai/ImageAnalysis/tspconfig.yaml
+++ b/specification/ai/ImageAnalysis/tspconfig.yaml
@@ -33,6 +33,6 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "ai-vision-image-analysis-rest"
-    package-details:
+    packageDetails:
       name: "@azure-rest/ai-vision-image-analysis"
     flavor: azure
