--- a/specification/azurefleet/AzureFleet.Management/tspconfig.yaml
+++ b/specification/azurefleet/AzureFleet.Management/tspconfig.yaml
@@ -47,13 +47,13 @@ options:
     head-as-boolean: true
     inject-spans: true
   "@azure-tools/typespec-ts":
-    azure-sdk-for-js: true
-    is-modular-library: true
-    generate-metadata: true
-    hierarchy-client: false
-    experimental-extensible-enums: true
-    enable-operation-group: true
+    azureSdkForJs: true
+    isModularLibrary: true
+    generateMetadata: true
+    hierarchyClient: false
+    experimentalExtensibleEnums: true
+    enableOperationGroup: true
     package-dir: "arm-computefleet"
     flavor: "azure"
-    package-details:
+    packageDetails:
       name: "@azure/arm-computefleet"
