--- a/specification/batch/Azure.Batch/tspconfig.yaml
+++ b/specification/batch/Azure.Batch/tspconfig.yaml
@@ -33,7 +33,7 @@ options:
     generate-sample: false
   "@azure-tools/typespec-ts":
     package-dir: "batch-rest"
-    package-details:
+    packageDetails:
       name: "@azure-rest/batch"
       description: "Batch Service Rest Level Client"
       version: "1.0.0-beta.1"
