--- a/specification/computeschedule/ComputeSchedule.Management/tspconfig.yaml
+++ b/specification/computeschedule/ComputeSchedule.Management/tspconfig.yaml
@@ -15,16 +15,16 @@ options:
     generate-test: true
     generate-sample: true
   "@azure-tools/typespec-ts":
-    azure-sdk-for-js: true
-    is-modular-library: true
-    generate-metadata: true
-    hierarchy-client: false
-    experimental-extensible-enums: true
-    enable-operation-group: true
-    generate-sample: true
+    azureSdkForJs: true
+    isModularLibrary: true
+    generateMetadata: true
+    hierarchyClient: false
+    experimentalExtensibleEnums: true
+    enableOperationGroup: true
+    generateSample: true
     package-dir: "arm-computeschedule"
     flavor: "azure"
-    package-details:
+    packageDetails:
       name: "@azure/arm-computeschedule"
   "@azure-tools/typespec-csharp":
     package-dir: "Azure.ResourceManager.ComputeSchedule"
