--- a/specification/contosowidgetmanager/Contoso.Management/tspconfig.yaml
+++ b/specification/contosowidgetmanager/Contoso.Management/tspconfig.yaml
@@ -28,14 +28,14 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "arm-contoso"
-    azure-sdk-for-js: true
-    is-modular-library: true
-    generate-metadata: true
+    azureSdkForJs: true
+    isModularLibrary: true
+    generateMetadata: true
     flavor: "azure"
-    hierarchy-client: false
-    experimental-extensible-enums: true
-    enable-operation-group: true
-    package-details:
+    hierarchyClient: false
+    experimentalExtensibleEnums: true
+    enableOperationGroup: true
+    packageDetails:
       name: "@azure/arm-contoso"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/contoso"
