--- a/specification/contosowidgetmanager/Contoso.WidgetManager/tspconfig.yaml
+++ b/specification/contosowidgetmanager/Contoso.WidgetManager/tspconfig.yaml
@@ -30,7 +30,7 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "contosowidgetmanager-rest"
-    package-details:
+    packageDetails:
       name: "@azure-rest/contoso-widgetmanager-rest"
     flavor: azure
   "@azure-tools/typespec-java":
