--- a/specification/devcenter/DevCenter/tspconfig.yaml
+++ b/specification/devcenter/DevCenter/tspconfig.yaml
@@ -29,8 +29,8 @@ options:
   "@azure-tools/typespec-ts":
     title: "Azure Developer DevCenter"
     package-dir: "developer-devcenter-rest"
-    generate-metadata: true
-    package-details:
+    generateMetadata: true
+    packageDetails:
       name: "@azure-rest/developer-devcenter"
       description: "Azure Developer DevCenter Client"
       version: "1.0.0"
