--- a/specification/eventgrid/Azure.Messaging.EventGrid.SystemEvents/tspconfig.yaml
+++ b/specification/eventgrid/Azure.Messaging.EventGrid.SystemEvents/tspconfig.yaml
@@ -32,15 +32,15 @@ options:
     flavor: azure
     api-version: "2018-01-01"
   "@azure-tools/typespec-ts":
-    generate-metadata: true
-    generate-test: false
-    azure-sdk-for-js: true
-    experimental-extensible-enums: true
+    generateMetadata: true
+    generateTest: false
+    azureSdkForJs: true
+    experimentalExtensibleEnums: true
     package-dir: "eventgrid-systemevents"
-    package-details:
+    packageDetails:
       name: "@azure/eventgrid-systemevents"
     flavor: azure
-    is-modular-library: true
+    isModularLibrary: true
   "@azure-tools/typespec-go":
     module: "github.com/Azure/azure-sdk-for-go/sdk/messaging/eventgrid/azsystemevents"
     module-version: "0.0.1"
