--- a/specification/eventgrid/Azure.Messaging.EventGrid/tspconfig.yaml
+++ b/specification/eventgrid/Azure.Messaging.EventGrid/tspconfig.yaml
@@ -45,11 +45,11 @@ options:
       loglevel: info
     flavor: azure
   "@azure-tools/typespec-ts":
-    generate-metadata: true
-    generate-test: true
-    azure-sdk-for-js: true
+    generateMetadata: true
+    generateTest: true
+    azureSdkForJs: true
     package-dir: "eventgrid"
-    package-details:
+    packageDetails:
       name: "@azure/eventgrid"
     flavor: azure
   "@azure-tools/typespec-go":
