--- a/specification/machinelearningservices/AzureAI.Assets/tspconfig.yaml
+++ b/specification/machinelearningservices/AzureAI.Assets/tspconfig.yaml
@@ -17,11 +17,11 @@ options:
     generate-test: true
     generate-sample: true
   "@azure-tools/typespec-ts":
-    generate-metadata: true
-    generate-test: true
-    azure-sdk-for-js: true
+    generateMetadata: true
+    generateTest: true
+    azureSdkForJs: true
     package-dir: "ai-resources-autogen"
-    package-details:
+    packageDetails:
       name: "@azure/ai-resources-autogen"
     flavor: azure
 linter:
