--- a/specification/programmableconnectivity/Azure.ProgrammableConnectivity/tspconfig.yaml
+++ b/specification/programmableconnectivity/Azure.ProgrammableConnectivity/tspconfig.yaml
@@ -26,11 +26,11 @@ options:
     generate-test: true
     generate-sample: true
   "@azure-tools/typespec-ts":
-    generate-metadata: true
-    generate-test: true
-    azure-sdk-for-js: true
+    generateMetadata: true
+    generateTest: true
+    azureSdkForJs: true
     package-dir: "programmableconnectivity"
-    package-details:
+    packageDetails:
       name: "@azure/programmableconnectivity"
     flavor: azure
 linter:
