--- a/specification/purview/Azure.Analytics.Purview.DataMap/tspconfig.yaml
+++ b/specification/purview/Azure.Analytics.Purview.DataMap/tspconfig.yaml
@@ -28,9 +28,9 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "purview-datamap-rest"
-    generate-metadata: true
-    generate-test: true
-    package-details:
+    generateMetadata: true
+    generateTest: true
+    packageDetails:
       name: "@azure-rest/purview-datamap"
       description: Purview DataMap Service"
     flavor: azure
