--- a/specification/schemaregistry/SchemaRegistry/tspconfig.yaml
+++ b/specification/schemaregistry/SchemaRegistry/tspconfig.yaml
@@ -30,9 +30,9 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "schema-registry"
-    generate-metadata: false
-    generate-test: false
-    package-details:
+    generateMetadata: false
+    generateTest: false
+    packageDetails:
       name: "@azure/schema-registry"
     flavor: azure
   "@azure-tools/typespec-csharp":
