--- a/specification/ai/DocumentIntelligence/tspconfig.yaml
+++ b/specification/ai/DocumentIntelligence/tspconfig.yaml
@@ -51,9 +51,9 @@ options:
   "@azure-tools/typespec-ts":
     title: DocumentIntelligence
     package-dir: "ai-document-intelligence-rest"
-    generate-metadata: true
-    generate-test: false
-    package-details:
+    generateMetadata: true
+    generate-tests: false
+    packageDetails:
       name: "@azure-rest/ai-document-intelligence"
       description: "Document Intelligence Rest Client"
       version: "1.0.0"
