--- a/specification/ai/OpenAI.Assistants/tspconfig.yaml
+++ b/specification/ai/OpenAI.Assistants/tspconfig.yaml
@@ -40,9 +40,9 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "openai"
-    generate-metadata: false
-    generate-test: false
-    is-modular-library: true
-    package-details:
+    generateMetadata: false
+    generateTest: false
+    isModularLibrary: true
+    packageDetails:
       name: "@azure/openai-assistants"
     flavor: azure
