--- a/specification/apicenter/ApiCenter.DataApi/tspconfig.yaml
+++ b/specification/apicenter/ApiCenter.DataApi/tspconfig.yaml
@@ -27,10 +27,10 @@ options:
     model-namespace: false
   "@azure-tools/typespec-ts":
     package-dir: "azure-apicenter-rest"
-    generate-metadata: true
-    generate-test: true
+    generateMetadata: true
+    generateTest: true
     flavor: azure
-    package-details:
+    packageDetails:
       name: "@azure-rest/azure-apicenter-rest"
       description: "azure.ApiCenter Service"
   "@azure-tools/typespec-java":
