--- a/specification/app/Microsoft.App.DynamicSessions/tspconfig.yaml
+++ b/specification/app/Microsoft.App.DynamicSessions/tspconfig.yaml
@@ -24,9 +24,9 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "microsoft-app-dynamicsessions-rest"
-    generate-metadata: true
-    generate-test: true
-    package-details:
+    generateMetadata: true
+    generateTest: true
+    packageDetails:
       name: "@azure-rest/microsoft-app-dynamicsessions-rest"
       description: "Microsoft.App Dynamic Sessions Service"
     flavor: azure
