--- a/specification/appcomplianceautomation/AppComplianceAutomation.Management/tspconfig.yaml
+++ b/specification/appcomplianceautomation/AppComplianceAutomation.Management/tspconfig.yaml
@@ -16,15 +16,15 @@ options:
     arm-resource-flattening: true
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/appcomplianceautomation.json"
   "@azure-tools/typespec-ts":
-    azure-sdk-for-js: true
-    is-modular-library: true
-    generate-metadata: true
-    hierarchy-client: false
-    experimental-extensible-enums: true
-    enable-operation-group: true
+    azureSdkForJs: true
+    isModularLibrary: true
+    generateMetadata: true
+    hierarchyClient: false
+    experimentalExtensibleEnums: true
+    enableOperationGroup: true
     flavor: azure
     package-dir: "arm-appcomplianceautomation"
-    package-details:
+    packageDetails:
       name: "@azure/arm-appcomplianceautomation"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-appcomplianceautomation"
