--- a/specification/appconfiguration/AppConfiguration/tspconfig.yaml
+++ b/specification/appconfiguration/AppConfiguration/tspconfig.yaml
@@ -28,9 +28,9 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "azure-appconfiguration-rest"
-    generate-metadata: true
-    generate-test: true
-    package-details:
+    generateMetadata: true
+    generateTest: true
+    packageDetails:
       name: "@azure-rest/azure-appconfiguration-rest"
       description: "Azure App Configuration"
     flavor: azure
