--- a/specification/applicationinsights/ApplicationInsights.LiveMetrics/tspconfig.yaml
+++ b/specification/applicationinsights/ApplicationInsights.LiveMetrics/tspconfig.yaml
@@ -28,9 +28,9 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "livemetrics-rest"
-    generate-metadata: true
-    generate-test: true
-    package-details:
+    generateMetadata: true
+    generateTest: true
+    packageDetails:
       name: "@azure-rest/livemetrics-rest"
       description: "LiveMetrics Service"
     flavor: azure
