--- a/specification/cognitiveservices/AnomalyDetector/tspconfig.yaml
+++ b/specification/cognitiveservices/AnomalyDetector/tspconfig.yaml
@@ -37,8 +37,8 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     emitter-output-dir: "{js-sdk-folder}/sdk/{service-directory-name}/ai-anomaly-detector-rest"
-    generate-metadata: true
-    generate-test: true
-    package-details:
+    generateMetadata: true
+    generateTest: true
+    packageDetails:
       name: "@azure-rest/ai-anomaly-detector"
     flavor: azure
