--- a/specification/cognitiveservices/ContentSafety/tspconfig.yaml
+++ b/specification/cognitiveservices/ContentSafety/tspconfig.yaml
@@ -29,7 +29,7 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "ai-content-safety-rest"
-    package-details:
+    packageDetails:
       name: "@azure-rest/ai-content-safety"
       version: "1.0.0"
       description: "ContentSafety Service"
