--- a/specification/communication/Communication.Messages/tspconfig.yaml
+++ b/specification/communication/Communication.Messages/tspconfig.yaml
@@ -55,7 +55,7 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "communication-messages-rest"
-    package-details:
+    packageDetails:
       name: "@azure-rest/communication-messages"
       description: "Azure client library for Azure Communication Messages services"
     flavor: azure
