--- a/specification/confidentialledger/Microsoft.CodeTransparency/tspconfig.yaml
+++ b/specification/confidentialledger/Microsoft.CodeTransparency/tspconfig.yaml
@@ -30,9 +30,9 @@ options:
   "@azure-tools/typespec-ts":
     flavor: azure
     package-dir: "codetransparency-rest"
-    generate-metadata: true
-    generate-test: true
-    package-details:
+    generateMetadata: true
+    generateTest: true
+    packageDetails:
       name: "@azure-rest/codetransparency-rest"
       description: "Code Transparency Service"
   "@azure-tools/typespec-java":
