--- a/specification/deviceregistry/DeviceRegistry.Management/tspconfig.yaml
+++ b/specification/deviceregistry/DeviceRegistry.Management/tspconfig.yaml
@@ -25,16 +25,16 @@ options:
     flavor: "azure"
     service-name: "Device Registry"
   "@azure-tools/typespec-ts":
-    azure-sdk-for-js: true
-    is-modular-library: true
-    generate-metadata: true
-    hierarchy-client: false
-    experimental-extensible-enums: true
-    enable-operation-group: true
-    generate-sample: true
+    azureSdkForJs: true
+    isModularLibrary: true
+    generateMetadata: true
+    hierarchyClient: false
+    experimentalExtensibleEnums: true
+    enableOperationGroup: true
+    generateSample: true
     package-dir: "arm-deviceregistry"
     flavor: "azure"
-    package-details:
+    packageDetails:
       name: "@azure/arm-deviceregistry"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-deviceregistry"
