--- a/specification/devopsinfrastructure/Microsoft.DevOpsInfrastructure.Management/tspconfig.yaml
+++ b/specification/devopsinfrastructure/Microsoft.DevOpsInfrastructure.Management/tspconfig.yaml
@@ -39,15 +39,15 @@ options:
     package-dir: "Azure.ResourceManager.DevOpsInfrastructure"
     namespace: "{package-dir}"
   "@azure-tools/typespec-ts":
-    azure-sdk-for-js: true
-    is-modular-library: true
-    generate-metadata: true
-    hierarchy-client: false
-    experimental-extensible-enums: true
-    enable-operation-group: true
+    azureSdkForJs: true
+    isModularLibrary: true
+    generateMetadata: true
+    hierarchyClient: false
+    experimentalExtensibleEnums: true
+    enableOperationGroup: true
     package-dir: "arm-devopsinfrastructure"
     flavor: "azure"
-    package-details:
+    packageDetails:
       name: "@azure/arm-devopsinfrastructure"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/devopsinfrastructure"
