--- a/specification/edge/Microsoft.Edge.Management/tspconfig.yaml
+++ b/specification/edge/Microsoft.Edge.Management/tspconfig.yaml
@@ -29,15 +29,15 @@ options:
     generate-sample: true
     flavor: azure
   "@azure-tools/typespec-ts":
-    azure-sdk-for-js: true
-    is-modular-library: true
-    generate-metadata: true
-    hierarchy-client: false
-    experimental-extensible-enums: true
-    enable-operation-group: true
+    azureSdkForJs: true
+    isModularLibrary: true
+    generateMetadata: true
+    hierarchyClient: false
+    experimentalExtensibleEnums: true
+    enableOperationGroup: true
     flavor: azure
     package-dir: "arm-commonedgesitemanageroperations"
-    package-details:
+    packageDetails:
       name: "@azure/arm-commonedgesitemanageroperations"
   "@azure-tools/typespec-csharp":
     package-dir: "Azure.ResourceManager.CommonEdgeSiteManagerOperations"
