--- a/specification/healthdataaiservices/HealthDataAIServices.DeidServices/tspconfig.yaml
+++ b/specification/healthdataaiservices/HealthDataAIServices.DeidServices/tspconfig.yaml
@@ -28,9 +28,9 @@ options:
   "@azure-tools/typespec-ts":
     package-dir: "azure-health-deidentification"
     title: DeidentificationClient
-    generate-metadata: true
-    generate-test: true
-    package-details:
+    generateMetadata: true
+    generateTest: true
+    packageDetails:
       name: "@azure-rest/health-deidentification"
       description: "Health Deidentification Service"
     flavor: azure
