--- a/specification/healthdataaiservices/HealthDataAIServices.Management/tspconfig.yaml
+++ b/specification/healthdataaiservices/HealthDataAIServices.Management/tspconfig.yaml
@@ -27,16 +27,16 @@ options:
     namespace: "com.azure.resourcemanager.healthdataaiservices"
     service-name: "Health Data AI Services"
   "@azure-tools/typespec-ts":
-    azure-sdk-for-js: true
-    is-modular-library: true
-    generate-metadata: true
-    hierarchy-client: false
-    experimental-extensible-enums: true
-    enable-operation-group: true
+    azureSdkForJs: true
+    isModularLibrary: true
+    generateMetadata: true
+    hierarchyClient: false
+    experimentalExtensibleEnums: true
+    enableOperationGroup: true
     package-dir: "arm-healthdataaiservices"
     emitter-output-dir: "{project-root}/{service-dir}/{package-dir}"
     flavor: "azure"
-    package-details:
+    packageDetails:
       name: "@azure/arm-healthdataaiservices"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/healthdataaiservices"
