--- a/specification/hybridconnectivity/HybridConnectivity.Management/tspconfig.yaml
+++ b/specification/hybridconnectivity/HybridConnectivity.Management/tspconfig.yaml
@@ -32,19 +32,19 @@ options:
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-ts":
-    azure-sdk-for-js: true
-    is-modular-library: true
-    generate-metadata: true
-    hierarchy-client: false
-    experimental-extensible-enums: true
-    enable-operation-group: true
+    azureSdkForJs: true
+    isModularLibrary: true
+    generateMetadata: true
+    hierarchyClient: false
+    experimentalExtensibleEnums: true
+    enableOperationGroup: true
     examples-directory: "{project-root}/examples"
-    typespec-title-map:
+    typespecTitleMap:
       HybridConnectivityManagementAPIClient: HybridConnectivityManagementAPI
-    generate-sample: true
+    generateSample: true
     package-dir: "arm-hybridconnectivity"
     flavor: "azure"
-    package-details:
+    packageDetails:
       name: "@azure/arm-hybridconnectivity"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/hybridconnectivity"
