--- a/specification/impact/Impact.Management/tspconfig.yaml
+++ b/specification/impact/Impact.Management/tspconfig.yaml
@@ -41,11 +41,11 @@ options:
     inject-spans: true
   "@azure-tools/typespec-ts":
     flavor: "azure"
-    is-modular-library: true
-    hierarchy-client: false
-    experimental-extensible-enums: true
-    enable-operation-group: true
-    generate-sample: true
+    isModularLibrary: true
+    hierarchyClient: false
+    experimentalExtensibleEnums: true
+    enableOperationGroup: true
+    generateSample: true
     package-dir: "arm-impactreporting"
-    package-details:
+    packageDetails:
       name: "@azure/arm-impactreporting"
