--- a/specification/informatica/Informatica.DataManagement.Management/tspconfig.yaml
+++ b/specification/informatica/Informatica.DataManagement.Management/tspconfig.yaml
@@ -28,15 +28,15 @@ options:
     namespace: "Azure.ResourceManager.InformaticaDataManagement"
   "@azure-tools/typespec-ts":
     service-dir: "sdk/informatica"
-    azure-sdk-for-js: true
-    is-modular-library: true
-    generate-metadata: true
-    hierarchy-client: false
-    experimental-extensible-enums: true
-    enable-operation-group: true
+    azureSdkForJs: true
+    isModularLibrary: true
+    generateMetadata: true
+    hierarchyClient: false
+    experimentalExtensibleEnums: true
+    enableOperationGroup: true
     package-dir: "arm-informaticadatamanagement"
     flavor: "azure"
-    package-details:
+    packageDetails:
       name: "@azure/arm-informaticadatamanagement"
 linter:
   extends:
