--- a/specification/keyvault/Security.KeyVault.Administration/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Administration/tspconfig.yaml
@@ -50,12 +50,12 @@ options:
     use-model-reader-writer: false
   "@azure-tools/typespec-ts":
     package-dir: "keyvault-admin"
-    generate-metadata: true
-    generate-test: false
+    generateMetadata: true
+    generateTest: false
     src-folder: "src/generated"
-    experimental-extensible-enums: true
-    is-modular-library: true
-    package-details:
+    experimentalExtensibleEnums: true
+    isModularLibrary: true
+    packageDetails:
       name: "@azure/keyvault-admin"
       description: "Azure Key Vault Administration"
     flavor: azure
