--- a/specification/keyvault/Security.KeyVault.Keys/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Keys/tspconfig.yaml
@@ -42,12 +42,12 @@ options:
   # "@azure-tools/typespec-csharp": true
   "@azure-tools/typespec-ts":
     package-dir: "keyvault-keys"
-    generate-metadata: true
-    generate-test: false
+    generateMetadata: true
+    generateTest: false
     src-folder: "src/generated"
-    experimental-extensible-enums: true
-    is-modular-library: true
-    package-details:
+    experimentalExtensibleEnums: true
+    isModularLibrary: true
+    packageDetails:
       name: "@azure/keyvault-keys"
       description: "Azure Key Vault Keys"
     flavor: azure
