--- a/specification/keyvault/Security.KeyVault.Secrets/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Secrets/tspconfig.yaml
@@ -40,12 +40,12 @@ options:
   # "@azure-tools/typespec-csharp": true
   "@azure-tools/typespec-ts":
     package-dir: "keyvault-secrets"
-    generate-metadata: true
-    generate-test: false
+    generateMetadata: true
+    generateTest: false
     src-folder: "src/generated"
-    experimental-extensible-enums: true
-    is-modular-library: true
-    package-details:
+    experimentalExtensibleEnums: true
+    isModularLibrary: true
+    packageDetails:
       name: "@azure/keyvault-secrets"
       description: "Azure Key Vault Secrets"
     flavor: azure
