--- a/specification/liftrqumulo/Qumulo.Storage.Management/tspconfig.yaml
+++ b/specification/liftrqumulo/Qumulo.Storage.Management/tspconfig.yaml
@@ -14,15 +14,15 @@ options:
     arm-resource-flattening: true
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/Qumulo.Storage.json"
   "@azure-tools/typespec-ts":
-    azure-sdk-for-js: true
-    is-modular-library: true
-    generate-metadata: true
-    hierarchy-client: false
-    experimental-extensible-enums: true
-    enable-operation-group: true
+    azureSdkForJs: true
+    isModularLibrary: true
+    generateMetadata: true
+    hierarchyClient: false
+    experimentalExtensibleEnums: true
+    enableOperationGroup: true
     package-dir: "arm-qumulo"
     flavor: "azure"
-    package-details:
+    packageDetails:
       name: "@azure/arm-qumulo"
   "@azure-tools/typespec-csharp":
     package-dir: "Azure.ResourceManager.Qumulo"
