--- a/specification/loadtestservice/LoadTestService/tspconfig.yaml
+++ b/specification/loadtestservice/LoadTestService/tspconfig.yaml
@@ -35,9 +35,9 @@ options:
     package-dir: "load-testing-rest"
     title: Azure Load Testing
     description: Azure Load Testing Client
-    generate-metadata: false
-    generate-test: false
-    package-details:
+    generateMetadata: false
+    generateTest: false
+    packageDetails:
       name: "@azure-rest/load-testing"
       description: "This package contains Microsoft Azure LoadTestingClient client library."
       version: 1.0.1
