--- a/specification/machinelearning/Azure.AI.ChatProtocol/tspconfig.yaml
+++ b/specification/machinelearning/Azure.AI.ChatProtocol/tspconfig.yaml
@@ -29,8 +29,8 @@ options:
     generate-sample: true
   "@azure-tools/typespec-ts":
     package-dir: "ai-chat-protocol"
-    is-modular-library: true
-    package-details:
+    isModularLibrary: true
+    packageDetails:
       name: "@azure/ai-chat-protocol"
     flavor: azure
   "@azure-tools/typespec-java":
