--- a/specification/mongocluster/DocumentDB.MongoCluster.Management/tspconfig.yaml
+++ b/specification/mongocluster/DocumentDB.MongoCluster.Management/tspconfig.yaml
@@ -36,15 +36,15 @@ options:
     clear-output-folder: true
     namespace: "{package-dir}"
   "@azure-tools/typespec-ts":
-    azure-sdk-for-js: true
-    is-modular-library: true
-    generate-metadata: true
-    hierarchy-client: false
+    azureSdkForJs: true
+    isModularLibrary: true
+    generateMetadata: true
+    hierarchyClient: false
     experimentalExtensibleEnums: true
-    enable-operationgroup: true
+    enableOperationGroup: true
     package-dir: "arm-mongocluster"
     flavor: "azure"
-    package-details:
+    packageDetails:
       name: "@azure/arm-mongocluster"
 linter:
   extends:
