--- a/specification/monitor/Microsoft.Monitor.Management/tspconfig.yaml
+++ b/specification/monitor/Microsoft.Monitor.Management/tspconfig.yaml
@@ -18,16 +18,16 @@ options:
     new-line: lf
     omit-unreachable-types: true
   "@azure-tools/typespec-ts":
-    azure-sdk-for-js: true
-    is-modular-library: true
-    generate-metadata: true
-    hierarchy-client: false
+    azureSdkForJs: true
+    isModularLibrary: true
+    generateMetadata: true
+    hierarchyClient: false
     experimentalExtensibleEnums: true
-    enable-operation-group: true
+    enableOperationGroup: true
     clear-output-folder: true
     package-dir: "arm-monitor"
     flavor: "azure"
-    package-details:
+    packageDetails:
       name: "@azure/arm-monitor"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-monitor"
