--- a/specification/playwrighttesting/PlaywrightTesting.Management/tspconfig.yaml
+++ b/specification/playwrighttesting/PlaywrightTesting.Management/tspconfig.yaml
@@ -26,16 +26,16 @@ options:
   #     emitter-output-dir: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/generated"
   #     code-kind: model
   "@azure-tools/typespec-ts":
-    azure-sdk-for-js: true
-    is-modular-library: true
-    generate-metadata: true
-    hierarchy-client: false
-    experimental-extensible-enums: true
-    enable-operation-group: true
-    generate-sample: true
+    azureSdkForJs: true
+    isModularLibrary: true
+    generateMetadata: true
+    hierarchyClient: false
+    experimentalExtensibleEnums: true
+    enableOperationGroup: true
+    generateSample: true
     package-dir: "arm-playwrighttesting"
     flavor: "azure"
-    package-details:
+    packageDetails:
       name: "@azure/arm-playwrighttesting"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-playwrighttesting"
