--- a/specification/riskiq/Easm/tspconfig.yaml
+++ b/specification/riskiq/Easm/tspconfig.yaml
@@ -22,7 +22,7 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "defendereasm-rest"
-    package-details:
+    packageDetails:
       name: "@azure-rest/defender-easm-rest"
     flavor: azure
   "@azure-tools/typespec-java":
