--- a/specification/servicenetworking/ServiceNetworking.Management/tspconfig.yaml
+++ b/specification/servicenetworking/ServiceNetworking.Management/tspconfig.yaml
@@ -19,16 +19,16 @@ options:
     omit-unreachable-types: true
     use-read-only-status-schema: true
   "@azure-tools/typespec-ts":
-    azure-sdk-for-js: true
-    is-modular-library: true
-    generate-metadata: true
-    hierarchy-client: false
-    experimental-extensible-enums: true
-    enable-operation-group: true
-    generate-sample: true
+    azureSdkForJs: true
+    isModularLibrary: true
+    generateMetadata: true
+    hierarchyClient: false
+    experimentalExtensibleEnums: true
+    enableOperationGroup: true
+    generateSample: true
     package-dir: "arm-servicenetworking"
     flavor: "azure"
-    package-details:
+    packageDetails:
       name: "@azure/arm-servicenetworking"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-servicenetworking"
