--- a/specification/sphere/Sphere.Management/tspconfig.yaml
+++ b/specification/sphere/Sphere.Management/tspconfig.yaml
@@ -22,15 +22,15 @@ options:
     namespace: Azure.Sphere
     model-namespace: false
   "@azure-tools/typespec-ts":
-    azure-sdk-for-js: true
-    is-modular-library: true
-    generate-metadata: true
-    hierarchyclient: false
-    experimental-extensible-enums: true
-    enable-operation-group: true
+    azureSdkForJs: true
+    isModularLibrary: true
+    generateMetadata: true
+    hierarchyClient: false
+    experimentalExtensibleEnums: true
+    enableOperationGroup: true
     package-dir: "arm-sphere"
     flavor: "azure"
-    package-details:
+    packageDetails:
       name: "@azure/arm-sphere"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-sphere"
