--- a/specification/terraform/Microsoft.AzureTerraform.Management/tspconfig.yaml
+++ b/specification/terraform/Microsoft.AzureTerraform.Management/tspconfig.yaml
@@ -38,15 +38,15 @@ options:
     generate-test: true
     generate-sample: true
   "@azure-tools/typespec-ts":
-    azure-sdk-for-js: true
-    is-modular-library: true
-    generate-metadata: true
-    hierarchy-client: false
-    experimental-extensible-enums: true
-    enable-operation-group: true
+    azureSdkForJs: true
+    isModularLibrary: true
+    generateMetadata: true
+    hierarchyClient: false
+    experimentalExtensibleEnums: true
+    enableOperationGroup: true
     package-dir: "arm-terraform"
     flavor: "azure"
-    package-details:
+    packageDetails:
       name: "@azure/arm-terraform"
 linter:
   extends:
