--- a/specification/trustedsigning/TrustedSigning/tspconfig.yaml
+++ b/specification/trustedsigning/TrustedSigning/tspconfig.yaml
@@ -27,9 +27,9 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "azure-developer-trustedsigning-rest"
-    generate-metadata: true
-    generate-test: true
-    package-details:
+    generateMetadata: true
+    generateTest: true
+    packageDetails:
       name: "@azure-rest/developer-trusted signing"
       description: "Azure trusted signing service"
     flavor: azure
