--- a/specification/verifiedid/Microsoft.VerifiedId.Management/tspconfig.yaml
+++ b/specification/verifiedid/Microsoft.VerifiedId.Management/tspconfig.yaml
@@ -16,15 +16,15 @@ options:
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/verifiedid.json"
     use-read-only-status-schema: true
   "@azure-tools/typespec-ts":
-    azure-sdk-for-js: true
-    is-modular-library: true
-    generate-metadata: true
-    hierarchy-client: false
-    experimental-extensible-enums: true
-    enable-operationgroup: true
+    azureSdkForJs: true
+    isModularLibrary: true
+    generateMetadata: true
+    hierarchyClient: false
+    experimentalExtensibleEnums: true
+    enableOperationGroup: true
     package-dir: "arm-verifiedid"
     flavor: "azure"
-    packagedetails:
+    packageDetails:
       name: "@azure/arm-verifiedid"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-verifiedid"
