--- a/specification/workloads/Workloads.SAPVirtualInstance.Management/tspconfig.yaml
+++ b/specification/workloads/Workloads.SAPVirtualInstance.Management/tspconfig.yaml
@@ -21,16 +21,16 @@ options:
     model-namespace: false
     namespace: "{package-dir}"
   "@azure-tools/typespec-ts":
-    azure-sdk-for-js: true
-    is-modular-library: true
-    generate-metadata: true
-    hierarchy-client: false
-    experimental-extensible-enums: true
-    enable-operation-group: true
-    generate-sample: true
+    azureSdkForJs: true
+    isModularLibrary: true
+    generateMetadata: true
+    hierarchyClient: false
+    experimentalExtensibleEnums: true
+    enableOperationGroup: true
+    generateSample: true
     package-dir: "arm-workloadssapvirtualinstance"
     flavor: "azure"
-    package-details:
+    packageDetails:
       name: "@azure/arm-workloadssapvirtualinstance"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-workloadssapvirtualinstance"
