--- a/specification/storage/Storage.Management/tspconfig.yaml
+++ b/specification/storage/Storage.Management/tspconfig.yaml
@@ -15,6 +15,7 @@ options:
     clear-output-folder: true
     examples-dir: "{project-root}/examples"
     package-dir: "Azure.ResourceManager.Storage"
+    arm-resource-flattening: false
  
 linter:
   extends:
