Adding managed identity settings (#32009)

--- a/specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_CreateOrUpdate.json
+++ b/specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_CreateOrUpdate.json
@@ -6,6 +6,12 @@
     "api-version": "2025-01-01",
     "containerAppEnvelope": {
       "location": "East US",
+      "identity": {
+        "type": "SystemAssigned,UserAssigned",
+        "userAssignedIdentities": {
+          "/subscriptions/34adfa4f-cedf-4dc0-ba29-b6d1a69ab345/resourcegroups/rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/myidentity": {}
+        }
+      },
       "properties": {
         "environmentId": "/subscriptions/34adfa4f-cedf-4dc0-ba29-b6d1a69ab345/resourceGroups/rg/providers/Microsoft.App/managedEnvironments/demokube",
         "workloadProfileName": "My-GP-01",
@@ -99,7 +105,17 @@
             "java": {
               "enableMetrics": true
             }
-          }
+          },
+          "identitySettings": [
+            {
+              "identity": "/subscriptions/34adfa4f-cedf-4dc0-ba29-b6d1a69ab345/resourcegroups/rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/myidentity",
+              "lifecycle": "All"
+            },
+            {
+              "identity": "system",
+              "lifecycle": "Init"
+            }
+          ]
         },
         "template": {
           "containers": [
@@ -222,6 +238,17 @@
         "name": "testcontainerapp0",
         "type": "Microsoft.App/containerApps",
         "location": "East US",
+        "identity": {
+          "type": "SystemAssigned,UserAssigned",
+          "principalId": "24adfa4f-dedf-8dc0-ca29-b6d1a69ab319",
+          "tenantId": "23adfa4f-eedf-1dc0-ba29-a6d1a69ab3d0",
+          "userAssignedIdentities": {
+            "/subscriptions/34adfa4f-cedf-4dc0-ba29-b6d1a69ab345/resourcegroups/rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/myidentity": {
+              "principalId": "74adfa4f-dedf-8dc0-ca29-b6d1a69ab312",
+              "clientId": "14adfa4f-eedf-1dc0-ba29-a6d1a69ab3df"
+            }
+          }
+        },
         "properties": {
           "provisioningState": "Succeeded",
           "runningStatus": "Running",
@@ -286,7 +313,17 @@
               "java": {
                 "enableMetrics": true
               }
-            }
+            },
+            "identitySettings": [
+              {
+                "identity": "/subscriptions/34adfa4f-cedf-4dc0-ba29-b6d1a69ab345/resourcegroups/rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/myidentity",
+                "lifecycle": "All"
+              },
+              {
+                "identity": "system",
+                "lifecycle": "Init"
+              }
+            ]
           },
           "template": {
             "containers": [
@@ -406,6 +443,17 @@
         "name": "testcontainerapp0",
         "type": "Microsoft.App/containerApps",
         "location": "East US",
+        "identity": {
+          "type": "SystemAssigned,UserAssigned",
+          "principalId": "24adfa4f-dedf-8dc0-ca29-b6d1a69ab319",
+          "tenantId": "23adfa4f-eedf-1dc0-ba29-a6d1a69ab3d0",
+          "userAssignedIdentities": {
+            "/subscriptions/34adfa4f-cedf-4dc0-ba29-b6d1a69ab345/resourcegroups/rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/myidentity": {
+              "principalId": "74adfa4f-dedf-8dc0-ca29-b6d1a69ab312",
+              "clientId": "14adfa4f-eedf-1dc0-ba29-a6d1a69ab3df"
+            }
+          }
+        },
         "properties": {
           "provisioningState": "InProgress",
           "runningStatus": "Running",
@@ -439,7 +487,17 @@
               "java": {
                 "enableMetrics": true
               }
-            }
+            },
+            "identitySettings": [
+              {
+                "identity": "/subscriptions/34adfa4f-cedf-4dc0-ba29-b6d1a69ab345/resourcegroups/rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/myidentity",
+                "lifecycle": "All"
+              },
+              {
+                "identity": "system",
+                "lifecycle": "Init"
+              }
+            ]
           },
           "template": {
             "containers": [
